2A/05_Projet_GL/src/test/deca/codegen/invalid/sansObjet/02_div_entier_zero.deca
// Description:
//    Programme avec division par 0
// Resultats:
//    Erreur : Division par zero
//
// Historique:
//    cree le 10/1/2024

{
    int x = 5/0;
    println(x);
}